deployment/backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
spec:
  type: ClusterIP
  ports:
    - name: backend
      port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: backend
          image: 999441754240.dkr.ecr.ap-northeast-1.amazonaws.com/atcodersearch-backend:0.1.2
          ports:
            - name: backend
              containerPort: 8000
          resources:
            requests:
              memory: 256Mi
              cpu: 200m
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
          args: ["atcodersearch", "server"]
          livenessProbe:
            httpGet:
              path: /api/liveness
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /api/readiness
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 3
      imagePullSecrets:
        - name: regcred
