deployment/frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  type: ClusterIP
  ports:
    - name: frontend
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: frontend
          image: 999441754240.dkr.ecr.ap-northeast-1.amazonaws.com/atcodersearch-frontend:0.1.8
          ports:
            - name: frontend
              containerPort: 3000
          resources:
            requests:
              memory: 256Mi
              cpu: 200m
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
      imagePullSecrets:
        - name: regcred
