deployment/solr.yaml
apiVersion: v1
kind: Service
metadata:
  name: solr
  labels:
    app: solr
spec:
  ports:
    - port: 8983
      name: solr
  clusterIP: None
  selector:
    app: solr
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: solr
spec:
  selector:
    matchLabels:
      app: solr
  serviceName: "solr"
  replicas: 1
  template:
    metadata:
      labels:
        app: solr
    spec:
      securityContext:
        runAsUser: 8983
        runAsGroup: 8983
        runAsNonRoot: true
        fsGroup: 8983
      terminationGracePeriodSeconds: 10
      containers:
        - name: solr
          image: 999441754240.dkr.ecr.ap-northeast-1.amazonaws.com/atcodersearch-solr:0.1.0
          ports:
            - containerPort: 8983
              name: solr
          resources:
            requests:
              memory: 512Mi
              cpu: 1000m
          volumeMounts:
            - name: problem-pvc
              mountPath: /var/solr/data/problem/data
            - name: user-pvc
              mountPath: /var/solr/data/user/data
            - name: submission-pvc
              mountPath: /var/solr/data/submission/data
            - name: recommend-pvc
              mountPath: /var/solr/data/recommend/data
          livenessProbe:
            httpGet:
              path: /solr/admin/cores
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /solr/admin/cores
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
      imagePullSecrets:
        - name: regcred
  volumeClaimTemplates:
    - metadata:
        name: problem-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 3Gi
    - metadata:
        name: user-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 3Gi
    - metadata:
        name: submission-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 3Gi
    - metadata:
        name: recommend-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 3Gi
---
